# az-kv-get-secret

./: Cargo.toml  README.md  run.sh
src/: main.rs
