[package]
name = "az-kv-get-secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.28"
azure_core = "0.13.0"
azure_identity = "0.13.0"
azure_security_keyvault = "0.13.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
clap = "2.33"
serde = "1.0"
serde_json = "1.0"